<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.view.activity.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_avatar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:background="@drawable/top_corner_bg">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawablePadding="15dp"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableStart="@drawable/ic_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawablePadding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            android:drawableStart="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:autofillHints="Enter email id"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:padding="10dp"
            android:maxLength="10"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawablePadding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:drawableStart="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:autofillHints="Enter email id"
            android:hint="@string/enter_mobile"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etReferralCode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawablePadding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/etMobile"
            android:drawableStart="@drawable/ic_home_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:autofillHints="Enter email id"
            android:hint="@string/referral_code"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawableEnd="@drawable/ic_view"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_padlock"
            app:layout_constraintTop_toBottomOf="@+id/etReferralCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:autofillHints="Enter email id"
            android:hint="@string/enter_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:drawableEnd="@drawable/ic_view"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_padlock"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:autofillHints="Enter email id"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_solid_bg"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
            tools:layout_editor_absoluteX="15dp" />

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnSignUp" />


        <TextView
            android:id="@+id/dontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/don_t_have_an_account_create_now"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/dontHaveAnAccount"
            app:layout_constraintStart_toEndOf="@+id/dontHaveAnAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>