<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.kotlin.basicstructure.ui.main.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.main.view.activity.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/top_corner_bg"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMobile"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Enter email id"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="15dp"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:hint="@string/enter_mobile"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:padding="10dp"
                android:text="@={viewModel.email}"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Enter email id"
                android:drawableStart="@drawable/ic_padlock"
                android:drawableEnd="@drawable/ic_view"
                android:drawablePadding="15dp"
                android:focusable="true"
                android:fontFamily="@font/montserrat"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:text="@={viewModel.password}"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMobile" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/yellow_solid_bg"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
                tools:layout_editor_absoluteX="15dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnLogin" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dontHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/don_t_have_an_account_create_now"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/dontHaveAnAccount"
                app:layout_constraintStart_toEndOf="@+id/dontHaveAnAccount"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>